--- a/2021-1-7/.project
+++ b/2021-1-7/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>2021-1-7</name>
+	<name>20210107</name>
 	<comment></comment>
 	<projects>
 	</projects>
