--- a/20210107-메소드기초/.project
+++ b/20210107-메소드기초/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>20210107-Method기초</name>
+	<name>20210107-메소드기초</name>
 	<comment></comment>
 	<projects>
 	</projects>
