--- a/20210114-객체지향프로그램응용_2/.project
+++ b/20210114-객체지향프로그램응용_2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>20210112-클래스(method)</name>
+	<name>20210114-객체지향프로그램응용_2</name>
 	<comment></comment>
 	<projects>
 	</projects>
