--- a/20210118-객체지향프로그램(상속,포함,접근지정어)_응용/.project
+++ b/20210118-객체지향프로그램(상속,포함,접근지정어)_응용/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>20210112-클래스(method)</name>
+	<name>20210118-객체지향프로그램(상속,포함,접근지정어)_응용</name>
 	<comment></comment>
 	<projects>
 	</projects>
